--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="get">
+		<label for="name">Name:</label><br>
+		<input type="text" id="name" name="name" required><br>
+		<label for="email">Email id:</label><br>
+		<input type="email" id="email" name="email"><br>
+		<input type="radio" id="male" name="male" required><br>
+		<p>Gender:</p>
+		<label for="male">Male</label>
+		<input type="radio" id="male" name="gender" required>
+		<label for="female">Female</label>
+		<input type="radio" id="female" name="gender" required><br><br>
+		<label for="cars">Car Brands:</label><br>
+		<select id="cars"><br>
+			<option value="BMW">BMW</option>
+			<option value="Audi">Audi</option>
+			<option value="Mercedez">Mercedez</option>
+		</select><br><br>
+          <label for="carage">Car Age:</label><br>
+		<input type="number" id="carage" name="carage" required><br>
+		<label for="dop">Date of Purchase:</label><br>
+		<input type="date" id="dop" name="dop" required><br>
+		<label for="password">Password</label><br>
+		<input type="password" id="password" name="password" required><br>
+		<button type="submit" form="form1" value="submit">Submit</button><br>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
